# restricted-boltzmann-machines

./: .gitignore  .gitmodules  README.md
code/: .gitignore  CMakeLists.txt  README.md  main.cc  rating_histogram.cc
code/movielens/: CMakeLists.txt  histogram.h  movie_dataset.cc  movie_dataset.h  rating_dataset.cc  rating_dataset.h  rbm.cc  rbm.h
code/tests/: CMakeLists.txt  rbm.cc
report/: .gitignore  abstract.tex  background.tex  conclusion.tex  implementation.tex  inference.tex  introduction.tex  learning.tex  main.tex  model.tex  problem.tex  references.bib  title.tex  titlepage.tex
report/figures/: gibbs-sampling-scheme.tex  movielens-movie-histogram.gp  movielens-movie-histogram.txt  movielens-user-histogram.gp  problem-example.tex  rbm-inference-example.tex  rbm-learning-example.tex  rbm-scheme-example.tex  rbm-scheme-inputs.tex  rbm-scheme.tex
slides/: .gitignore  main.tex  references.bib
slides/figures/: .gitignore  gibbs-sampling-scheme.tex  main.tex-style  makefile  movielens-movie-histogram.gp  movielens-user-histogram.gp  movielens-user-histogram.txt  problem-example.tex  rbm-inference-example.tex  rbm-learning-example.tex  rbm-scheme-arrows.tex  rbm-scheme-empty.tex  rbm-scheme-example.tex  rbm-scheme-inputs-only.tex  rbm-scheme-inputs.tex  rbm-scheme-layers.tex  rbm-scheme-parameters.tex  rbm-scheme.tex
